Update column classes for responsive design

--- a/dashboard.html
+++ b/dashboard.html
@@ -179,7 +179,7 @@
                     <h2 class="page-title">Dashboard</h2>
                 
                 <div class="row g-4">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-sm-12">
                         <div class="card-header-custom">
                                 <i class="bi bi-person-x"></i>
                                 <h3 class="card-title-custom">Who's off</h3>
@@ -234,7 +234,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-sm-12">
                         <div class="card-header-custom">
                                 <i class="bi bi-gift"></i>
                                 <h3 class="card-title-custom">Upcoming Birthdays</h3>
@@ -284,7 +284,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-sm-12">
                         <div class="card-header-custom">
                                     <i class="bi bi-check-circle"></i>
                                     <h3 class="card-title-custom">Approvals</h3>
